# Exam_Database

./: .gitignore  package-lock.json  package.json  pyproject.toml
data/paper_ids/: chongqing_ids.txt  guokao_ids.txt  label_ids.md  sichuan_ids.txt
docs/: ARCHITECTURE.md  GIT_GITHUB_WORKFLOW.md  OBSIDIAN_INTEGRATION.md  PROJECT_LOGIC.md  SKILLS.md  SOURCES.md  SOURCE_BACKLOG.md  SOURCE_ROADMAP.md  TAXONOMY.md  code-review-feature-integrate-knowledgebase-pipeline.md
scripts/obsidian/: .env.local.example  collect_chongqing_gov_recent.sh  collect_gov_policy_recent.sh  collect_people_commentary_recent.sh  collect_qstheory_recent.sh  collect_sichuan_gov_recent.sh  collect_xinhua_politics_recent.sh  discover_fenbi_papers.sh  fenbi_login.sh  fetch_fenbi_all.sh  fetch_fenbi_paper.sh  generate_weekly_report.sh  import_inbox_papers.sh  init_examdb.sh  list_practice_questions.sh  retag_policy_articles.sh  sync_policy_article_metadata.sh
scripts/playwright/: fenbi_auth.mjs  fenbi_fetch_shenlun_solution.mjs  fenbi_fetch_solution.mjs  fenbi_list_papers.mjs  fenbi_verify.mjs
skills/analyze-practice-results/: SKILL.md
skills/classify-exam-questions/: SKILL.md
skills/collect-policy-materials/: SKILL.md
skills/import-exam-papers/: SKILL.md
skills/operate-obsidian-examdb/: SKILL.md
src/examdb/: __init__.py  ai.py  cleaning.py  cli.py  config.py  db.py  enrichment.py  fenbi.py  markdown.py  models.py  paper_sources.py  papers.py  (+5 more)
tests/: test_cleaning.py  test_db_and_papers.py  test_gov_policy.py  test_new_sources.py  test_people_commentary.py  test_retag.py  test_sync.py
(+35 files in other folders)
