[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "examdb"
version = "0.1.0"
description = "Obsidian-first civil-service exam material database."
readme = "docs/PROJECT_LOGIC.md"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber>=0.11",
    "pypdf>=5",
]

[project.scripts]
examdb = "examdb.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
